<resources>
    <string name="app_name">Electronic shop</string>

    <string name="google_map_api_key">AIzaSyB8oGbBPyfQEaTWySHzeYxQ1uqHw9SSj-g</string>

    <string-array name="city_list">
        <item>Aswan</item>
        <item>Luxor</item>
        <item>Qena</item>
        <item>Sohag</item>
        <item>Assiut</item>
        <item>Minia</item>
        <item>Beni Swief</item>
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Red Sea</item>
        <item>Esmailia</item>
        <item>Suiz</item>
        <item>El-Sharkia</item>
        <item>El-Monofia</item>
        <item>El-Gharbia</item>
        <item>El-Dakahlia</item>
    </string-array>

    <string-array name="country_list">
        <item>Egypt</item>
        <item>Sudan</item>
        <item>Libya</item>
        <item>Tunisia</item>
        <item>Algeria</item>
        <item>Morocco</item>
        <item>Mauritania</item>
        <item>Palestinian</item>
        <item>Syria</item>
        <item>Yemen</item>
    </string-array>

    <string-array name="category_list">
        <item>@string/Laptops</item>
        <item>@string/Mobiles</item>
        <item>@string/Tablets</item>
        <item>@string/PCs</item>
        <item>@string/Screens</item>
        <item>@string/Wears</item>
        <item>@string/Accessories</item>
        <item>@string/Home_appliances</item>
    </string-array>

    <string name="Laptops">Laptops</string>
    <string name="Mobiles">Mobiles</string>
    <string name="Tablets">Tablets</string>
    <string name="PCs">PCs</string>
    <string name="Screens">Screens</string>
    <string name="Wears">Wears</string>
    <string name="Accessories">Accessories</string>
    <string name="Home_appliances">Home appliances</string>

    <string name="signUpHint">Create an account to access all features</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="termsandprivacyTextIntroduction">
        We respects the privacy of our users. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our mobile application Electronic Shop, including any other media form, media channel, mobile website, or mobile application related or connected thereto (collectively, the application). Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy, please do not access the site.\nWe reserve the right to make changes to this Privacy Policy at any time and for any reason. We will alert you about any changes by updating the “Last Updated” date of this Privacy Policy. Any changes or modifications will be effective immediately upon posting the updated Privacy Policy on the Site, and you waive the right to receive specific notice of each such change or modification.\nYou are encouraged to periodically review this Privacy Policy to stay informed of updates. You will be deemed to have been made aware of, will be subject to, and will be deemed to have accepted the changes in any revised Privacy Policy by your continued use of the Site after the date such revised Privacy Policy is posted.
    </string>

    <string name="termsandprivacyTextCollecationOfYourInformation">
        We may collect information about you in a variety of ways. The information we may collect on the Site includes:\n\n
        <b>Personal Data</b>\nPersonally identifiable information, such as your name, shipping address, email address, and telephone number, and demographic information, such as your age, gender, hometown, and interests, that you voluntarily give to us (when you register with the Site (or our mobile application), or) when you choose to participate in various activities related to the Site (and our mobile application), such as online chat and message boards. You are under no obligation to provide us with personal information of any kind, however your refusal to do so may prevent you from using certain features of the Site (and our mobile application).\n\n
        <b>Derivative Data</b>\nInformation our servers automatically collect when you access the Site, such as your IP address, your browser type, your operating system, your access times, and the pages you have viewed directly before and after accessing the Site. (If you are using our mobile application, this information may also include your device name and type, your operating system, your phone number, your country, your likes and replies to a post, and other interactions with the application and other users via server log files, as well as any other information you choose to provide.)\n\n
        <b>Financial Data</b>\nFinancial information, such as data related to your payment method (e.g. valid credit card number, card brand, expiration date) that we may collect when you purchase, order, return, exchange, or request information about our services from our mobile application. (We store only very limited, if any, financial information that we collect. Otherwise, all financial information is stored by our payment processor, (Amazon Payments), (Authornize.Net), (Braintree Payments), (Chargify), (Dwolla), (Google Checkout), (Paypal), (SafeCharge), (Stripe), (WePay), (2Checkout), (other), and you are encouraged to review their privacy policy and contact them directly for responses to your questions.)\n\n
        <b>Facebook Permissions</b>\nThe Site (and our mobile application) may by default access your Facebook basic account information, including your name, email, gender, birthday, current city, and profile picture URL, as well as other information that you choose to make public. We may also request access to other permissions related to your account, such as friends, checkins, and likes, and you may choose to grant or deny us access to each individual permission. For more information regarding Facebook permissions, refer to the Facebook Permissions Reference page.\n\n
        <b>Data From Social Networks</b>\nUser information from social networking sites, such as (Apple’s Game Center, Facebook, Google+, Instagram, Pinterest, Twitter), including your name, your social network username, location, gender, birth date, email address, profile picture, and public data for contacts, if you connect your account to such social networks. (If you are using our mobile application, this information may also include the contact information of anyone you invite to use and/or join our mobile application.)\n\n
        <b>Mobile Device Data</b>\nDevice information, such as your mobile device ID, model, and manufacturer, and information about the location of your device, if you access the Site from a mobile device.\n\n
        <b>Third-Party Data</b>\nInformation from third parties, such as personal information or network friends, if you connect your account to the third party and grant the Site permission to access this information.\n\n
        <b>Data From Contests, Giveaways, and Surveys</b>\nPersonal and other information you may provide when entering contests or giveaways and/or responding to surveys.\n\n
        <b>Mobile Application Information</b>\nIf you connect using our mobile application:\n\n
        ●<i>Geo-Location Information.</i> We may request access or permission to and track location-based information from your mobile device, either continuously or while you are using our mobile application, to provide location-based services. If you wish to change our access or permissions, you may do so in your device’s settings.\n
        ●<i>Mobile Device Access.</i> We may request access or permission to certain features from your mobile device, including your mobile device’s (bluetooth, calendar, camera, contacts, microphone, reminders, sensors, SMS messages, social media accounts, storage), and other features. If you wish to change our access or permissions, you may do so in your device’s settings.\n
        ●<i>Mobile Device Data.</i> We may collect device information (such as your mobile device ID, model and manufacturer), operating system, version information and IP address.\n
        ●<i>Push Notifications.</i> We may request to send you push notifications regarding your account or the Application. If you wish to opt-out from receiving these types of communications, you may turn them off in your device’s settings.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>