<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".ui.mainPage.MainPage"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/whiteColor">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/showCart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/shopping_cart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_edittext"
            android:hint="Search"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/mainColor"
            android:textColorHint="@color/greyColor"
            android:focusable="false"
            android:lines="1"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/search">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categoryChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/Laptops"
                    android:textColor="@color/whiteColor"
                    app:chipBackgroundColor="@color/lightMainColor" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/Mobiles"
                    android:textColor="@color/whiteColor"
                    app:chipBackgroundColor="@color/lightMainColor" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/Tablets"
                    android:textColor="@color/whiteColor"
                    app:chipBackgroundColor="@color/lightMainColor" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/PCs"
                    android:textColor="@color/whiteColor"
                    app:chipBackgroundColor="@color/lightMainColor" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/Screens"
                    android:textColor="@color/whiteColor"
                    app:chipBackgroundColor="@color/lightMainColor" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/Wears"
                    android:textColor="@color/whiteColor"
                    app:chipBackgroundColor="@color/lightMainColor" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/Accessories"
                    android:textColor="@color/whiteColor"
                    app:chipBackgroundColor="@color/lightMainColor" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/Home_appliances"
                    android:textColor="@color/whiteColor"
                    app:chipBackgroundColor="@color/lightMainColor" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/lightestColor">

                <ImageView
                    android:id="@+id/headerImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/leftImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <ImageView
                        android:id="@+id/rightImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/centerLeftImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"/>

                    <ImageView
                        android:id="@+id/centerRightImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/bottomLeftImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <ImageView
                        android:id="@+id/bottomRightImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/fragmentFrame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>